--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                     <h6>August 2022 -</h6>
                 </div>
                 <div class="col-md-6 col-lg-3">
-                    <h2>GT3 Marketing</h2>
+                    <h2>GT3 Media</h2>
                     <p>
                        ROI Marketing Agency that I am currently working on getting off the ground.
                     </p>
