--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
             <p>
                 I am very interested in entrepreneurship as well as productivity.
             </p>
+            <p>
+                Lastly, I am an avid pianist, check out a recording of me playing:
+            </p>
+            <iframe width="420" height="315" src="https://youtu.be/embed/NIkrnmpaVdA/"></iframe>
         </div>
     </body>
 </html>
