--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <p>
                 Lastly, I am an avid pianist, check out a recording of me playing:
             </p>
-            <iframe width="420" height="315" src="https://youtu.be/embed/NIkrnmpaVdA/"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NIkrnmpaVdA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
 </html>
