because why not?

--- a/interests.html
+++ b/interests.html
@@ -25,6 +25,8 @@
                 <li class="list-group-item">finance</li>
                 <li class="list-group-item">exercise</li>
                 <li class="list-group-item">setting and maintaining habits</li>
+                <li class="list-group-item">deleting white space</li>
+                <li class="list-group-item">reading relevant legal documents</li>
             </ol>
         </div>
     </body>
