Moved all images into an images folder

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="bc.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/bc.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="qc.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/qc.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="bday.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/bday.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
