Added styles folder as well

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <script src="script.js"></script>
 
-        <link href="styles.css" rel="stylesheet">
+        <link href="/styles/styles.css" rel="stylesheet">
 
         <title>Kian's Resume</title>
     </head>
