--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,9 @@
                        ROI Marketing Agency that I am currently working on getting off the ground.
                     </p>
                     <h6>August 2022 -</h6>
-                    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%; padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;"> <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFKvB_Lit8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"> </iframe> </div> <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFKvB_Lit8&#x2F;view?utm_content=DAFKvB_Lit8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">(GT3) Media</a>
+                    <div id="canva">
+                         <iframe loading="lazy" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFKvB_Lit8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <h2>Donations Coordinator</h2>
