Added my strava to to interests w/ link, LFG!

--- a/interests.html
+++ b/interests.html
@@ -20,6 +20,7 @@
                 I have a plethora of interests which include:
             </p>
             <ol class="list-group list-group-numbered">
+                <li class="list-group-item">cycling, here is a <a href="https://www.strava.com/athletes/106370063">link</a> to my strava profile, (you need to follow me to see my workouts)</li>
                 <li class="list-group-item">cryptocurrency</li>
                 <li class="list-group-item">machine learning</li>
                 <li class="list-group-item">finance</li>
