Added Fall 22 courses

--- a/cv.html
+++ b/cv.html
@@ -17,17 +17,32 @@
             </nav>
             <h1>CV</h1>
             <p>
-                Here is a list of all of the courses that I have followed at the University of Alberta.
+                Here is a list of all of the courses that I have taken at the University of Alberta.
             </p>
+            <h2>Fall 2021</h2>
+            </table>
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item">PHYS 144</li>
                 <li class="list-group-item">MATH 144</li>
                 <li class="list-group-item">MATH 125</li>
                 <li class="list-group-item">CMPUT 174</li>
+            </ol>
+            <h2>Winter 2022</h2>
+            <ol class="list-group list-group-numbered">
                 <li class="list-group-item">STAT 161</li>
                 <li class="list-group-item">MATH 146</li>
                 <li class="list-group-item">CMPUT 175</li>
                 <li class="list-group-item">CMPUT 272</li>
+            </ol>
+            <h2>Fall 2022</h2>
+            </table>
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">CMPUT 495</li>
+                <li class="list-group-item">ACCTG 300</li>
+                <li class="list-group-item">STAT 252</li>
+                <li class="list-group-item">CMPUT 201</li>
+                <li class="list-group-item">CMPUT 291</li>
+                <li class="list-group-item">CMPUT 204</li>
             </ol>
         </div>
     </body>
