changed to deprecated

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             </ol>
         </nav>
         <div class="container">
+            <p>
+                This webpage is deprecated and now serves as a snap shot in time
+                My current homepage is https://sites.ualberta.ca/~kkyars/
+            </p>
             <h1>Kian Kyars</h1>
             <hr>
             <nav role="navigation">
