--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </nav>
         <div class="container">
             <p>
-                This webpage is deprecated and now serves as a snap shot in time
-                My current homepage is https://sites.ualberta.ca/~kkyars/
+                This webpage is deprecated and now serves as a snap shot in time\n
+                My  <a href="https://sites.ualberta.ca/~kkyars/">current</a>
             </p>
             <h1>Kian Kyars</h1>
             <hr>
