--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <p>
                 This webpage is deprecated and now serves as a snap shot in time\n
-                My  <a href="https://sites.ualberta.ca/~kkyars/">current</a>
+                My <a href="https://sites.ualberta.ca/~kkyars/">current</a> homepage
             </p>
             <h1>Kian Kyars</h1>
             <hr>
