--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="container">
             <p>
-                This webpage is deprecated and now serves as a snap shot in time\n
+                This webpage is deprecated and now serves as a snap shot in time<br>
                 My <a href="https://sites.ualberta.ca/~kkyars/">current</a> homepage
             </p>
             <h1>Kian Kyars</h1>
